src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedTranslationKey3/InvalidUnexpectedTranslationKey3.php
<?php

namespace Invalid\UnexpectedTranslationKey3;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

class InvalidUnexpectedTranslationKey3 extends ClarolineExtension
{
    public function getDescriptionTranslationKey()
    {
        return '';
    }
}